# python-library-template

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  README.md  cloudbuild.yaml  genindex.html  index.html  modules.html  objects.inv  project_template.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  tests.bdd.html  tests.bdd.steps.html  tests.html  tox.ini
.doctrees/: environment.pickle  index.doctree  modules.doctree  project_template.doctree  tests.bdd.doctree  tests.bdd.steps.doctree  tests.doctree
.github/workflows/: sphinx-pages.yaml
docs/: README.md  conf.py  developer_setup.md  testing_strategy.md
project_template/api/: sample.py
tests/bdd/steps/: bdd_example_steps.py  parent_step.py
