[project]
name = "python-library-template"
version = "0.1.0"
description = "Template python repo with our proven approaches."
authors = [
    "Adam Frank <afrank@mozilla.com>",
    "Bryan Sieber <bsieber@mozilla.com>",
    "Chris Valaas <cvalaas@mozilla.com>",
    "Jorge Spiropulo <jspiropulo@mozilla.com>"
]
readme = "README.md"
python = ">=3.7"
homepage = "https://github.com/mozilla-it/python-library-template"
repository = "https://github.com/mozilla-it/python-library-template"
documentation = "https://mozilla-it.github.io/python-library-template"

classifiers = [
    "Topic :: Software Development"
]

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3"
]
build-backend = "setuptools.build_meta"

################
#    Tools     #
################

# Note: Tox.skipsdist: Defaults to False but can be toggled to true if issues arise with the lack of a setup.py
[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
skipsdist = True
envlist = py37

[testenv]
deps = pipenv
commands =  pipenv install --dev
            pipenv run behave tests/bdd

[testenv:setup-docs]
deps = {[testenv]deps}
commands =  pipenv install --dev

[testenv:behave-docs]
deps = {[testenv:setup-docs]deps}
commands =  {[testenv:setup-docs]commands}
            pipenv run behave --dry-run --no-summary -q --format sphinx.steps -o {toxworkdir}/.tmp/steps tests/bdd
            #After configuring sphinx-build try removing this commented code
            #pipenv run sphinx-build -b html {toxworkdir}/.tmp/steps auto_docs/html


[testenv:docs]
deps = {[testenv:setup-docs]deps}
description = invoke sphinx-build to build the HTML docs
basepython = python3.7
commands =  {[testenv:setup-docs]commands}
            #After configuring sphinx-build try removing this commented code
            #pipenv run sphinx-build -d "{toxworkdir}/docs_doctree" doc "auto_docs/html" --color -W -bhtml {posargs}

"""


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
